[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/characters/floor_monster.png" type="Texture" id=1]
[ext_resource path="res://src/characters/enemies/FloorMonster.gd" type="Script" id=2]
[ext_resource path="res://src/shaders/glitch.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/shake_power = 0.02
shader_param/shake_rate = 4.0
shader_param/n_stripes = 20.0
shader_param/chromatic_aberration = 0.02
shader_param/rgb_opacity = 1.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.79444, 3.92822 )

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.75334, 0.629761 )

[node name="FloorMonster" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.166855, 0.834274 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -7.79536, 2.44997 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 8.32586, 2.00452 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="GlitchBoxDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlitchBoxDetector"]
position = Vector2( 0.0743256, 0.5 )
shape = SubResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_FloorMonster_area_entered"]
[connection signal="body_entered" from="GlitchBoxDetector" to="." method="_on_GlitchBoxDetector_body_entered"]
[connection signal="body_exited" from="GlitchBoxDetector" to="." method="_on_GlitchBoxDetector_body_exited"]
